Fixed labs list on mobile devices

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -37,6 +37,7 @@ button{
 }
 
 .container {
+  min-height: 100% !important;
   position: fixed;
   margin-top: 56px;
   padding-bottom: 56px;
